# maratona

./: .clang-format  CMakeLists.txt  README.md  template.cpp
graph/: prim.cpp
src/: CMakeLists.txt  template.h
src/dsa/: 2D_prefix_arr.cpp  CMakeLists.txt  disjoint.cpp  fenwickTree.cpp  heap.cpp  mdc.cpp  pow.cpp  trie.prefixTree.cpp
src/graph/: CMakeLists.txt  bfs.cpp  cycle.cpp  dfs.cpp  dijkstra.cpp  prim.cpp  scc.cpp
tests/: CMakeLists.txt
tests/dsa/: CMakeLists.txt  disjoint.cpp  heap.cpp  mdc.cpp  pow.cpp
tests/graph/: CMakeLists.txt  bfs.cpp  cycle.cpp  dfs.cpp  dijkstra.cpp  prim.cpp  scc.cpp
